# MonsterHub

./: .travis.yml  CMakeLists.txt  README.md
cmake/: build_options.cmake  compiler_warnings.cmake  sanitizers.cmake
main/: CMakeLists.txt
main/src/: defines.h  input.h  key.h  main.cpp  unix.cpp  window.cpp  window.h  windows.cpp
main/src/debug/: assert.cpp  assert.h  frame_stats.h  global_stats.h  logger.h  statistics.cpp  statistics.h
main/src/io/: filesystem.cpp  filesystem.h  image.cpp  image.h  terminal.h
main/src/logging/: logger.cpp  logger.h
main/src/math/: matrix.h  vec2.cpp  vec2.h
main/src/rendering/: color.cpp  color.h  font.cpp  font.h  gl_assert.cpp  gl_assert.h  image.cpp  image.h  logger.h  projection.cpp  projection.h  renderer.cpp  renderer.h  spritesheet.cpp  spritesheet.h  texture.cpp  texture.h  texture_region.cpp  texture_region.h
main/src/util/: array.h  unreachable.cpp  unreachable.h
test/: CMakeLists.txt
test/constexpr/: CMakeLists.txt
test/constexpr/src/: dummy.cpp
test/unit/: CMakeLists.txt
test/unit/src/: dummy.cpp
test/unit/src/math/: test_vec2.cpp
